# nedviga

./: .env.dirty  .gitignore  alembic.ini  definitions.json  docker-compose.yaml  pyproject.toml
auth/src/: config.py  ioc.py  main.py
auth/src/application/: dto.py  interactors.py  interfaces.py
auth/src/controllers/: amqp.py  http.py  schemas.py
auth/src/domain/: entities.py
auth/src/infrastructure/: broker.py  cache.py  database.py  gateways.py
chats/src/: config.py
chats/src/application/: dto.py  interactors.py  interfaces.py
chats/src/controllers/: http.py
chats/src/domain/: entities.py
chats/src/infrasructure/: database.py  gateways.py
database/src/: models.py
database/src/migrations/: env.py
events/src/: config.py  ioc.py  main.py  tasks.py
events/src/application/: interactors.py  interfaces.py
events/src/infrastructure/: broker.py  cache.py  database.py  gateways.py
mail/src/: config.py  ioc.py  main.py
mail/src/application/: dto.py  interactors.py  interfaces.py
mail/src/controllers/: controllers.py
mail/src/domain/: entities.py
mail/src/infrastructure/: broker.py  gateways.py  templates.py
src/infrastructure/: database.py
src/infrastructure/migrations/: env.py
